# Chess

./: .gitignore  CMakeLists.txt  README.md
include/: board.hpp  chessGUI.hpp  menu.hpp  piece.hpp  player.hpp
src/: board.cpp  chessGUI.cpp  menu.cpp  piece.cpp  player.cpp
tests/: test_moves.cpp  test_piece.cpp  test_player.cpp
